rollback <surefireArgLine /> value